--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,10 @@
   "cairols": {
     "cairoPath": ["/Users/gabin/src/focustree/contracts/src"],
     "disableHintValidation": "./**/test_*.cairo",
-    "nileUseVenv": false,
-    "useVenv": false
+    "useVenv": true,
+    "venvCommand": "source .venv/bin/activate",
+    "nileUseVenv": true,
+    "nileVenvCommand": "source .venv/bin/activate",
+    "highlightingCompiler": "starknet"
   }
 }
